# $Id: Changes,v 1.121 2004/04/08 02:49:39 petdance Exp $
Revision history for Perl extension WWW::Mechanize

0.76    Wed Apr  7 22:01:43 CDT 2004

        [ENHANCEMENTS]
        * Added update_html() to let you update the HTML for the page
          you're on.

        [FIXES]
        * Test files account for new Google layout.

        [INTERNALS]
        * Rearranged the local tests into their own t/local/ directory.

        * Made the standalone tests show what server they're hitting.

        * Checked that it runs under LWP 5.78.


0.74    Mon Mar 22 23:36:46 CST 2004

        [ENHANCEMENTS]
        * WWW::Mechanize now sends an Accept-Encoding header of "identity"
          to always enforce plaintext responses. Preliminary support for
          Compress::Zlib is also there, but is disabled by default.

        * Added click_button() and select() methods.  The field() method
          can now take an arrayref of values, if appropriate. Thanks,
          Linda Lee Julien.

        * Added url_abs and url_abs_regex parms to find_all_links().

        * URLs in META REFRESH tags are now treated as links.

        * t/taint.t makes sure that things that should be tainted are.

        [FIXES]
        * Still more fixes if the machine you're on doesn't have
          DNS pointing to it.

        * The local changes use localhost as the local host name, instead
          of whatever host name that might be on the box, but not in DNS.
          Thanks to David Wheeler for letting me play on his box.

        * The http_proxy and HTTP_PROXY environment variables get
          deleted during the tests that access the dummy local server.
          This should let your tests pass, and clear up a lot of RT
          tickets.

0.72    Mon Jan 26 21:07:20 CST 2004
        [ENHANCEMENTS]
        * Added the set_visible() method, thanks to Peter Scott.

        [DOCUMENTATION]
        * Started the Cookbook at WWW::Mechanize::Cookbook.pod.

        [INTERNALS]